--- a/apikey/.env
+++ b/apikey/.env
@@ -1,6 +1,5 @@
-DB_HOST= 127.0.0.1
-DB_USER= root
-DB_DATABASE= dbsistemapikey
-DB_PASS= ridhorzq
-DB_PORT= 3309
-DB_DIALECT= mysql
+DB_HOST=127.0.0.1
+DB_USER=root
+DB_PASSWORD=ridhorzq
+DB_NAME=dbsistemapikey
+PORT=3000
